<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image"
            android:layout_width="500dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="35dp"
            android:contentDescription="@string/image"
            android:src="@drawable/logoteknisi" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/image"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/e_mail"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edit_nama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:padding="15dp"
                android:text="@string/masukkan_email"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                tools:ignore="Autofill,LabelFor,TextFields" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/nohp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/image"
            android:layout_marginStart="16dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:padding="15dp"
                android:text="@string/masukkan_password"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                tools:ignore="Autofill,LabelFor,TextFields" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nohp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_button"
                android:text="@string/login"
                android:textColor="@android:color/white" />

        </LinearLayout>
    </RelativeLayout>
</ScrollView>